--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
             background-image: url("img1.jpg");
         }
     </style>
-    <h1 style="color: white; text-align: center; font-size: 180px;">Hi Gabie</h1>
+    <h1 style="color: white; text-align: center; font-size: 180px;">我係傻仔</h1>
 </body>
 </html>
